tests/fixtures/original-compiler/passing/QualifiedAliasExpansion/Lib.purs
module Lib where

type Alias = Int

type Rec = { x :: Int, y :: String }
