tests/fixtures/original-compiler/failing/QualifiedAliasShadow/Lib.purs
module Lib where

type Event = { name :: String }

data Foo = Foo
